fix: prevent reader toolbar from covering lookup panel

--- a/resources/sass/TextReader/TextReader.scss
+++ b/resources/sass/TextReader/TextReader.scss
@@ -48,7 +48,7 @@
 
     #toolbar-box {
         display: inline-block;
-        float: right;
+        float: left;
         width: 44px;
         z-index: 2;
         background-color: var(--v-background-base);
